WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248548
[macOS] Data detector highlights are broken with UI-side compositing
https://bugs.webkit.org/show_bug.cgi?id=248548
Summary
[macOS] Data detector highlights are broken with UI-side compositing
Aditya Keerthi
Reported
2022-11-30 12:41:08 PST
rdar://101664503
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-11-30 13:15:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6983
EWS
Comment 2
2022-12-01 17:22:52 PST
Committed
257261@main
(dc20f61c73d1): <
https://commits.webkit.org/257261@main
> Reviewed commits have been landed. Closing PR #6983 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug